--- a/.gitignore
+++ b/.gitignore
@@ -465,6 +465,12 @@ $RECYCLE.BIN/
 # dependencies
 /node_modules
 
+
+#db
+*.db
+*.db-shm
+*.db-wal
+
 # profiling files
 chrome-profiler-events*.json
 
