--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.3.0-alpha1",
+    "ngx-bootstrap": "^7.1.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
