--- a/Front/ProEventos-App/package.json
+++ b/Front/ProEventos-App/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve -o",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && ng serve -o",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-free": "^6.3.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.3.0-alpha1",
+    "bootswatch": "^5.2.3",
     "ngx-bootstrap": "^7.1.2",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.3.0",
