--- a/Back/src/ProEventos.API/ProEventos.API.csproj
+++ b/Back/src/ProEventos.API/ProEventos.API.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="ProEventos.db" />
     <None Remove="Resources\Images\20210103_1231227568.jpg" />
     <None Remove="Resources\Images\Anotação 2233717344.png" />
     <None Remove="Resources\Images\Anotação-2230904134.png" />
